# axumbooru

./: .gitignore  Cargo.toml  README.md  booruconfig_default.toml  config.inc.php  docker-compose_templ.yaml  dsync.rs
.cargo/: config.toml
client/: Dockerfile  nginx.conf.docker
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20240225_224934_create_user.rs  m20240227_020126_create_post.rs  m20240309_230808_create_snapshot.rs  m20240309_230819_create_user_token.rs
migrations/2024-02-14-201802_create_users/: up.sql
migrations/2024-02-17-015954_create_posts/: up.sql
service/: Cargo.toml
service/src/: post.rs  user.rs  usertoken.rs
src/: auth-dw.rs  auth.rs  config.rs  data.rs  error.rs  main.rs  schema.rs
src/api/: data.rs  info.rs  mod.rs  post.rs  test.rs  user.rs  usertoken.rs
src/api/post/: mod.rs  model.rs  post.rs
src/db/: errors.rs  mod.rs  repository.rs
src/db/models/: mod.rs  post.rs  user.rs  usertoken.rs
src/db/schemas/: mod.rs  post.rs  prelude.rs  prelude_model.rs  snapshot.rs  user.rs  user_token.rs
src/func/: post.rs
src/models/posts/: generated.rs
src/models/users/: generated.rs
tests/: service_tests.rs
