[package]
name = "axumbooru"
authors = ["Shiroyashik <shiroyashik@shsr.ru>"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
default-run = "axumbooru"
publish = false

[workspace]
members = ["migration", "entity", "service"]

[dependencies]
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["json", "query"] }
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "0.8.10"
tower-http = { version = "0.5.1", features = ["fs"] }
chrono = { version = "0.4.34", features = ["serde"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "debug-print"] }
service = { path = "service"}
hmac = "0.12.1"
md-5 = "0.10.6"
mime_guess2 = "2.0.5"
