[package]
name = "axumbooru"
authors = ["Shiroyashik <shiroyashik@shsr.ru>"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["migration"]

[dependencies]
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["json", "query", "tracing", "multipart"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
chrono = { version = "0.4.37", features = ["serde"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "debug-print"] }
hmac = "0.12.1"
md-5 = "0.10.6"
mime_guess2 = "2.0.5"
thiserror = "1.0.58"
argon2 = "0.5.3"
sha1 = "0.10.6"
log = "0.4.21"
env_logger = "0.11.3"
